# reb_2025_2026_genap_EE255271_kecerdasan_buatan_tugas_04

./: .gitignore  README.md  pyproject.toml  run.py
data/: simulation_results.csv  synthetic_wind_turbine_case.csv
references/: draft.md  profile.md  review_framework.md  template
reports/: appendix_python_implementation.tex  jurnal_review_fuzzy_joko_pawitro_6022251005.tex  references.bib
src/ametm_ts/: __init__.py  ametm.py  cli.py  controller.py  data_utils.py  fuzzy.py  metrics.py  plotting.py  simulation.py  wind_turbine.py
tests/: __init__.py  test_ametm.py  test_data_and_simulation.py  test_fuzzy.py  test_metrics.py
