[project]
name = "tugas_4_anfis"
version = "0.1.0"
description = "Repository tugas 4 - ANFIS: review jurnal dan pengaturan repo"
authors = [ { name = "Joko Pawitro" } ]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
